Fix IE tile-wrapping bug

--- a/app/states/root/section-state/_section-state_styles.scss
+++ b/app/states/root/section-state/_section-state_styles.scss
@@ -157,12 +157,14 @@
 	@include respond-to( 'medium' )
 	{
 		justify-content: center;
-
+	}
+	@include respond-to( 'medium-large' )
+	{
 		@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
 		{
 			justify-content: center;
 
-			max-width: 700px;
+			max-width: 700px !important;
 		}
 	}
 
